# rash-old

./: Cargo.toml  Pong 1 Sprite 1 Script.sb3  README.md  pi assembly.txt  vartest.sb3
backups/src backup 1 fn pointer/: code_thread.rs  interpreter.rs  machine_state.rs  main.rs  sprite.rs
backups/src backup 1 fn pointer/instructions/: base.rs  operator.rs
backups/src backup 2 before instruction enum tuple/: interpreter.rs  thread.rs
src/: ansi_codes.rs  costume_loader.rs  interpreter.rs  main.rs  pen_canvas.rs  pen_line.rs  project_state.rs  sprite.rs  thread.rs
src backup 2 before instruction enum tuple/: main.rs  project.rs  sprite.rs
src/bc_compiler/: bc_comp_main.rs  bc_comp_optimizer.rs  bc_comp_register_allocator.rs
src/blocks/: block_control.rs  block_looks.rs  block_motion.rs  block_operators.rs  block_pen.rs  block_sensing.rs  block_variables.rs
src/compile/: control.rs  looks.rs  motion.rs  operators.rs  pen.rs  sensing.rs  variables.rs
src/project/: base.rs  loader.rs  optimizer.rs  project_file_loader.rs  project_main.rs  register_allocator.rs  state.rs
src/thread_compiler/: thread_compiler_main.rs  thread_compiler_optimizer.rs  thread_compiler_register_allocator.rs  thread_compiler_variable_manager.rs
tests/: 1s1s1cportableplatformerscroller.sb3  README.md  mc1.sb3  pi calculator.sb3  vartest.sb3
