[package]
name = "rash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.192"
serde_json = "1.0.108"
tempfile = "3.8.1"
zip-extract = "0.1.2"

# For SVG
clap = { version = "4.1.4", features = ["derive"] }
eyre = "0.6.8"
color-eyre = "0.6.2"
usvg-text-layout = "0.29.0"
usvg = "0.29.0"
resvg = "0.29.0"
tiny-skia = "0.8.3"
log = "0.4.20"
simple_logger = "4.2.0"

[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["image"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
strip = true
